typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeParameters1.ts.stderr
error: TS1094 {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeParameters1.ts:3:8
  |
3 |    set foo<T>(v) { }
  |        ^^^

